Add traces feature
